Fri Mar  11  19:25:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (InitGTK): move the 'Go' menu to the right place
	accoring to HIG. 
	* gtkgame.c (GTKHelp): Make the command reference window a dialog.
	
Sun Mar  06  18:00:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c InitGTK(): Exclude GTK_STOCK_ABOUT when gtkversion < 2.6

Sat Mar  05  23:50:45 2005 Oystein Johansen <oystein@gnubg.org>

	This is the first commit in a large GUI cleanup I intend to do.

	Cleanup in the menu system. Simplify all the 'File' menues. Rearrange
	accoring to Human Interface Guidlines 2.0 (HIG 2.0). Add some stock
	icons to some of the menu items. Please comment on the stock items.

	* gtkgame.[ch], gtkpanels.c, gtktoolbar.c: Menu cleanup.
	
Fri Feb  25  11:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtk(some).c : Make event boxes transparent (By Ingo Macherius)

Tue Feb 23   18:26:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c, progress.c: Make all progress bars with gtk_progress_bar
	  instead of the deprecated gtk_progress_*, when compiled with GTK+2.
	  
Wed Feb 23   06:49:52 2005 GMT Jim Segrave

	* gtkpanels.c: use string.h rather than strings.h to get
	  prototype for strcasecmp()
	
Tue Feb  22  19:26:45 2005 Oystein Johansen <oystein@gnubg.org>

        * gtkcube.c (CubeAnalysisEvalPly): Get the evalcontext right!

Tue Feb  22  19:06:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (GTKFileCommand): Apply a fix from Ingo
	
Fri Feb  18  16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* matchequity.c : Fix met xml files met/catalog (By Ingo Macherius)

Thu Feb  17  16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkfile.c (and a few others): First part of new
		file dialogs (By Ingo Macherius)
	* gtkpanels.c: Minor gtk 2 window fix

Tue Feb  15  17:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkpanels.c: Remember maximised state of windows
